--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -1,10 +1,125 @@
 ---
 label: "20"
 title: "A Short History of Suction Tables"
-short_title:
+short_title: A Short History of Suction Tables
 layout: essay
 order: 200
 contributor:
   - first_name: Jim
     last_name: Coddington
+    title: Independent Scholar (Retired)
+    affiliation:
+abstract: The development and use of suction tables as an alternative to preexisting lining practices was introduced in the 1970s and ’80s. Vocal dissatisfaction with the aesthetic results of many linings had grown in the years before this, resulting in numerous designs for suction tables that were more versatile and controllable for conservators undertaking structural treatments of paintings. The principal versions of these tables came to be known by the names of the conservators who designed them--Mehra, Hacke, and Willard. These tables, while similar in many ways, each had unique features that incorporated the designer’s theory of lining and more generally structural treatments.
 ---
+
+## Introduction
+
+The history of the suction table, as history, is an interesting story of ideas sometimes driving technology and at other times technology driving ideas. However, it is reasonable to say that the technologies and designs of the tables that were developed in the 1970s and 1980s are remarkably similar, with the driving rationale of the designer being probably the most critical difference between any of the tables. Indeed, these suction tables are routinely referred to by the name of the principal or co-principal designer. The tables this paper focuses on are those designed by Mehra, Hacke, and Willard. Each emerged at the time of, or shortly after, the Greenwich lining conference, with the Willard table becoming the design most widely distributed over the years.
+
+The stated goals and final designs of each provide useful insight into how the mechanics of paintings were understood at the time of design. They also provide some understanding of our aesthetic criteria for paintings then—and how much (or even little) each of these differs from our understanding and thinking today. Finally, these designs also illustrate how knowledge gained in the conservation studio—craft knowledge—is often later articulated in the scientific laboratory, affording greater refinement to those studio practices.
+
+## Mehra’s Design
+
+Vishwa Mehra, who had been working at the Central Research Laboratory in Amsterdam since 1966, began his public discussion of lining treatments at the 1972 ICOM meeting in Madrid. There, he examined the prevailing orthodoxy of lining and posited a set of new criteria for structural restoration. His observations and evaluation of the functional and aesthetic shortcomings of glue linings and wax-resin linings are familiar, and questions of reversibility; weave interference; stability of treatment materials; and visual alteration of fabric, ground, and paint were particularly critical ones.
+
+He also suggested that leaving visible traces of a painting’s age, such as some cupping and cracking, was viable, as opposed to trying to make them disappear as completely as possible ([[Ackroyd 2002\|, 4]]).[^1] Mehra’s critique led him to conclude that structural problems should be understood through more systematic analysis and more precise treatment—or a series of treatments—rather than through a single global treatment like overall consolidation or lining. The first need then, was to determine with greater accuracy the actual strength of the materials in a painting composite, which would then allow the conservator to tailor treatments to individual paintings.
+
+Mehra’s ideas had been in the air for some time by then.[^2] A reading of the ICOM replies to the lining questionnaire distributed in 1972 and published in 1975 offers some revealing insights into concerns that practitioners had for both glue and wax-resin linings ([[Rees Jones, Cummings, and Hedley 1975]]). Wax-resin lining had been the subject of some considerable research and development in Britain, resulting in 1948 in the construction of what is deemed the first hot table. In 1955, this mechanization of lining (and consolidation, of which much will be made later) was furthered by the introduction of vacuum to the hot table ([[Hackney 2020\|, 84]]). By 1960, it was noted in an ICOM report that many paintings fared poorly under such treatments. With this background in mind, Mehra had, by 1972, set down what might be called his first principles, of which there are eight, summarized here ([[Mehra 1972]]):
+
+1.  Full reversibility.
+
+2.  No alteration of the structural character of the painting.
+
+3.  Select materials for the specific problems of the actual painting.
+
+4.  Flexibility.
+
+5.  Avoid or minimize heat.
+
+6.  Minimal weight increase after lining.
+
+7.  Non-penetrating lining adhesive (note similarity to item 2).
+
+8.  Adhesives should be stable with RH and have variable strength and application properties.
+
+He then went on to specify that the materials used for structural restoration should be synthetic in order to fulfill stability and reversibility criteria. Putting all of this together was, in Mehra’s thinking, a fundamentally new approach, outside the glue and wax-lining traditions. The practical application of this theoretical position required the separation of consolidation from lining. In this way, it was possible to meet criteria of lightness and to also select materials appropriate to the mechanical and aesthetic properties of the painting under treatment.
+
+Considering the question of consolidation, Mehra established the following criteria for a successful consolidant ([[Mehra 1972]]):
+
+-   Light in weight but having good cohesion.
+
+-   Solvent will not swell paint layer.
+
+-   Internally plasticized.
+
+-   Colorless and resistant to temperature and RH changes.
+
+-   Compatible with the painting structure.
+
+The consolidants he chose were Plexisol and Bedacryl, which he then ultimately coupled with Plextol as a cold-lining adhesive. By using these consolidants, Mehra found he could achieve adequate consolidation results with less adhesive and could then use relatively lightweight fabrics when lining.
+
+The use of these aqueous materials, as well as the need to minimize lining defects such as weave interference and moating (that is, no alteration of the structural character of the painting), dictated the development of a suction table, and in 1975, Mehra published the design of a table to dry the painting under controllable low pressure. The function of the table is predicated upon high airflow capabilities, and thus required a significant plenum, which is covered by a perforated sheet of metal. The airflow is controlled by varying both the blower speed and by opening and closing the bleeder vents at one end of the table. The table thus has directional flow, the air being brought in one end of the table and out the other. On the surface of the perforated sheet is an open cell polyurethane sheet that can conform to the topography of the rear of the painting, although not too readily ([**fig. 20.1**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-1)).
+
+Ultimately, Mehra developed a three-stretcher system for use on the table when lining. The first stretcher, significantly larger than the painting, has the lining fabric attached to it. The reason for this oversize lining fabric is Mehra’s estimation that the center of a stretched fabric has fewer asymmetric strains than the edges, so the extra lining fabric minimizes introduction of new stress patterns on the painting after lining. The second stretcher has a screen stretched on it, with the sight size of the painting marked off. Through this screen, the adhesive is squeegeed onto the lining canvas, and then the screen is lifted, leaving on the lining fabric a measured dose of adhesive. The amount of adhesive can be varied by using different types of screens (fine to coarse). The painting, previously strip-lined onto the third stretcher, is carefully placed onto the adhesive, and the painting is then dried on the suction table. The presence of a membrane during drying would be optional. The strip-lining would later be removed if it had adhered on top of the tacking edge.
+
+It should be noted that at certain points in the development of this system Mehra was relying on the moisture in the adhesive to help relax the painting—as one coming from a background in glue-lining might well do. Over time, he moved more toward pretreating these distortions and toward using less and less adhesive for lining. Mehra was nothing if not relentlessly logical in the development of each step of his process; thus, it is not inconceivable that another motive for his ultimately incorporating Saran beads into the lining adhesive was as a means of lowering the adhesive strength to the level of a nap bond.
+
+The advent of technological advancements such as the Mehra table led others to develop yet other new procedures, and to also refine the lining adhesive strength problem. At the Courtauld Institute, Gerry Hedley, Alan Phenix, and Vicky Leanse investigated the use of solvent activation of a variety of synthetic adhesives ([**fig. 20.2**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-2)). Such approaches further refined the process, raising the possibility of further controlling lining adhesive strength via control of solvent dosage prior to lining ([[Phenix and Hedley 1984]]).
+
+## Hacke’s Design
+
+As mentioned earlier, Mehra regarded his approach to the lining and structural treatment of paintings as a fundamental departure from the tradition of glue and wax-resin linings. Similar technology was being developed at roughly the same time by Bent Hacke, who at the 1981 ICOM meeting noted that his goal was to “construct an instrument based on the tradition of our profession” ([[Hacke 1981a]]). More specifically, his was an effort to call attention to the practical and useful elements of glue-lining while still being aware of the potential problems. This is fundamental to the discussion of the next two tables—Hacke and Willard—because both were developed with an eye toward mechanizing or adapting the glue-lining tradition—quite explicitly so in the case of the Willard table.
+
+Hacke published his first paper on “untraditional” lining, as he called it, in 1964. By the 1978 ICOM meeting many of his table’s essential features were already in place ([[Hacke 1978]]). His system evolved to incorporate four principal features— heat, moisture, tension, and pressure—the manipulation of which Hacke once described as “like playing my piano.”[^3] By varying these factors during treatment, he was also able to arrive at the goal of tailoring the treatment procedure to the painting’s needs. Like Mehra, Hacke found that as he focused on pretreatment he could use less adhesive for lining. Note that, however, Hacke, although he preferred synthetics for their durability, did not wholly reject natural fabrics and adhesives as Mehra did. Similarly, the use of heat was not eschewed but rather incorporated to facilitate plasticization of the paint film. Ethylene glycol mixed with water was occasionally used for the same purpose.
+
+The structure of Hacke’s table is a plenum with an eggcrate structure inside, through which heating elements pass ([**fig. 20.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-3)). Air is removed from the plenum to create low pressure beneath the painting, and this air is moved via headers along the edge of the table. On top of the eggcrate structure is an aluminum sheet with fairly large holes. Atop this is placed a moist blanket for the humidifying part of the treatment, and then onto that is placed a fine-holed screen that will hold the loomed painting. Ultimately, the wet blanket is replaced by a humidifier that introduces humid air beneath the painting via the plenum during the pretreatment stage. As with the Mehra process, before lining—or even as a substitute for lining—pretreatment of distortion, cupping, and flaking is done, all facilitated by the suction table to humidify and/or pull consolidant into the paint film ([**fig. 20.4**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-4)).
+
+When overall consolidation was necessary, a consolidant like Plexisol was used. For lining, Plextol was used, principally for its low-temperature heat activation. The strength of the lining adhesive could be varied by the number of coats of adhesive applied: typically, one or two coats, which were allowed to dry overnight. In contrast to Mehra’s system, Hacke’s is not purely a cold-lining method.
+
+## Willard’s Design
+
+Similar to Bent Hacke, Tony Reeve saw a need to standardize or mechanize the process of glue-lining, and from this the Willard table developed ([[Reeve 1984]]). This table is rather more explicitly a table designed to execute—and more importantly control—glue-linings. As glue-linings rely greatly on the skill of the liner and the liner's experience, many of the features of the Willard table integrate controls that rely on such knowledge to bring the table to full operation. The heating is not too different from the Hacke table, although the flow is considerably more complicated. The idea of humidifying from the rear is the same and is also mechanized, as Hacke’s table ultimately was. Hacke rather dryly noted that “it proves to be very complicated to work out a system which makes it possible to blow in moist air which can be accumulated in the structure of the painting.”[^4] The mechanization of humidification through the ducting of a suction table is indeed a technically difficult proposition, and therefore a lot of controls are built into the Willard table. The potential for damage by too much moisture is well known to glue liners and thus the system incorporates a dehumidifier as well. Early versions of the Willard table were tested quite rigorously at the National Gallery, London, and at Tate, with extensive modification of the initial design to accommodate a number of difficulties encountered, such as condensation in the ducting and on the surface of the table ([[Reeve, Ackroyd, and Stephenson-Wright 1988]]) ([**fig. 20.5**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-5)).
+
+One of the critical features of this design is the two independent flow patterns. One set of channels introduces the conditioned air to the backside of the painting or, theoretically, up into a closed chamber; the other flow system holds the painting flat on the table. As with the Hacke table, there are removable aluminum sheets. This table has since been produced commercially and is widely distributed.
+
+## Other Tables
+
+It is significant that without a glue-lining tradition to rely on, but with rather more experience using synthetic adhesives for lining and consolidation, the United States lagged behind in the development of suction tables devoted to both mechanizing plasticization of the paint film and lining paintings. Ultimately, research developments informed these efforts more than did an adaptation of long-standing traditions. It is difficult to overstate how critical Marion Mecklenburg’s research on the mechanical properties of the materials in a painting were to these and many other advances in structural treatments both in the US and Europe.[^5] It is then not surprising to see how similar key elements of suction table design were, whether they emerged from older traditions or from laboratory research—illustrating once again how basic research converges on established practice.
+
+One of the first US suction tables for paintings was the Versi-Vac tabletop device, developed by Albert Albano and Bill Maxwell ([[Albano 1984]]). Fundamental to the design of this was the idea to use the existing base of hot tables as a heat source, but to use suction instead of vacuum as a pressure source. In addition, an inflatable dome would be used to control the environment around the painting, thereby putting into practice Mecklenburg’s work on optimal humidification levels to plasticize paint films ([[Colville, Kilpatrick, and Mecklenburg 1982]]). The principal drawback to this table design is that as, a tabletop device, the plenum is shallow—basically the depth of the two wire screens attached to the frame, thus limiting the rate of flow beneath the painting and making the system incapable of some treatments.
+
+The question of efficient airflow in suction tables was an area of investigation that has been most fully addressed by Stefan Michalski in a number of papers that are both theoretically and practically focused (see, e.g., [[Michalski 1984]]). Of particular note are the textile suction tables he demonstrated during the early 1980s and several papers on the theory of how suction tables work. Michalski drew out the critical points of the power of capillarity in moving moisture in and out of paper (or more generically cellulosics), the relationship of airflow and pressure curves in suction pump specification, the concept of creating low pressure beneath an object to thereby create downward pressure on it from above, and the use of alternate flow channels to minimize drying fronts when drying textiles.
+
+This latter point makes an important distinction between such a flow design and that of Mehra’s table design, which had a unidirectional laminar flow. By making the airflow a series of short paths across the entire surface, as Michalski did, the drying capability of the table is enhanced; each of the many short air paths avoids becoming saturated. Notably, this kind of flow pattern is also incorporated into the Willard table discussed above. If in addition a screen is present on top of the channels, the air will be made more turbulent, and this will further enhance drying efficiency. Such a flow pattern also allows drying of a painting or textile from underneath, thus allowing membranes to be used during drying and letting the practitioner maintain a desired level of planarity for the object throughout the drying process.
+
+Of course, unless something is wet one doesn’t really need to concern oneself with how to get it dry (on a suction table or otherwise). Mecklenburg's fundamental work on the influence of moisture on the strength and stiffness of canvas, sizing, and paint is basic to understanding—and subsequently mechanizing—the humidification process ([[Mecklenburg 1982]])—basic because it begins to quantify the plasticization of paint and identifies mechanisms by which moisture can be dangerous and is thus richly suggestive of how to design effective structural treatments with or without lining. Specifically, Mecklenburg’s research demonstrated that at high relative humidity, damage occurs because the canvas shrinks, and at the same time the glue size and paint have become so low in stiffness that they cannot resist the movement of the canvas. He also demonstrated that pigments have a profound effect on the uptake of moisture by a paint film, and that at low relative humidities the glue size layer is capable of generating stresses in the paint film that could lead to failure (cracking). The implications for the treatment of paintings—and for controlling that treatment—are enormous.
+
+Humidifying paintings to aid in the plasticization of the paint film, whether using damp blankets or blotters or via the water in a glue-paste adhesive, was of course a well-established practice prior to the basic research cited above. Both practice and tradition made clear the need to control the amount of moisture introduced into the composite structure of a painting. A mechanized system of humidification would thus seek to maintain a level of RH that will give the conservator confidence that plastic changes are occurring only in desired layers of the painting—the size and paint film—while not exceeding dangerous levels of moisture in the canvas.
+
+All of this theoretical background was fundamental to the design of the final table I will discuss, one of which was built for New York’s Museum of Modern Art by Bill Maxwell. The table design was initiated by Al Albano and sought to also address the specific needs of MoMA, specifically that the table should be fungible: effective for both paper and paintings conservation. Indeed, as Caroline Villers notes in reviewing the state of affairs at the time of the Greenwich Lining Conference, “The practical problems posed by contemporary paintings were an important driver for change” ([[Villers 2003a]]). The nature of MoMA's collection—which includes many large works, composite works, and essentially raw canvas works—dictated that the table would be large, with a high airflow for the “textile” problems but sufficiently flexible to treat local distortions or flaking or to even do straight hot table linings for “traditional” paintings. To achieve all this, the experience and ideas of a number of people, including Stefan Michalski and Gerry Hedley, were consulted on the design.
+
+The base of the 8 x 12 ft (2.4 x 3.7m) working surface is basically an aluminum-top hot table with heaters attached underneath and double heaters at the sides to minimize any edge heating gradient. On top of this are 1-inch square aluminum channels, which run the length of the table and have holes drilled in the top at regular intervals. These channels are alternate intake and exhaust channels with an intake header at one end and exhaust at the other, where four 100 CFM fans run in parallel. On top of the channels is an aluminum heat exchanger, which is effective at distributing the airflow from the channels to the top surface (a perforated aluminum sheet) while also aiding in transfer of heat to the table surface ([**fig. 20.6**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/20-Coddington/fig-20-6)). Pressure and flow are controlled by leakage, a rheostat that varies the voltage to the pumps, an intake valve at the intake header end of the table. By opening an additional valve this intake air can also be passed through an auxiliary heater, and this provides an effective means of minimizing loss of the heat conducted up through the layers to the airflow layers.
+
+The flow pattern is thus a sweeping of air up from underneath (if the intake valve is open) and the pulling of air down from above. It is this movement of air from underneath which allows for drying under a membrane; it also increases the efficiency of heat transfer from the heating plate. Pressure, of course, will depend on how much air is introduced via the intake valve, as well as the porosity of the support, whether it is canvas or paper, the density of the paint film, and other variables.
+
+Humidification is done inside a chamber that attaches to the table proper, with a steam humidifier as the moisture source. The humidity is introduced through the tent support poles, which are inserted into ducting that runs around the edges of the table and is fed by the steam humidifier. Clearly, the use of a moist felt or blotter beneath the object is also feasible. The rationale for this method of humidification from above is dictated by Mecklenburg’s research, which demonstrates that (1) the canvas is the point at which significant damage can occur (due to canvas shrinkage) if too much moisture is present, and (2) that the paint film and/or glue size are the sources of stresses that lead to cracking, flaking of the paint, and general distortions. Thus, it was deemed in this table design that it was unnecessarily hazardous to introduce moisture through the canvas if the primary goal was to use the moisture to plasticize the paint film. To humidify a painting, a tent is built on the table, using predrilled holes at the corners for inserting the supports. Humidity is measured by a dew-point sensor located in the tent, which then maintains an RH set point by switching the steam humidifier on and off. The tent has openings on all four sides, which are tabbed with Velcro to facilitate working on the painting during humidification.
+
+## Conclusion
+
+This paper has outlined the basic features of the early generation of suction tables for the treatment of paintings, along with a discussion of the context of each design. This history reveals the similarities of the designs yet also pinpoints the differences between them in how they articulate the role of tradition within innovation. Additionally, it provides a broader perspective on how knowledge is gained in conservation through the development of studio practices and its associated craft knowledge. These, while empirically derived, reveal highly sophisticated understanding of materials that is later articulated through scientific research.
+
+{% backmatter %}
+
+## Notes
+
+{% endbackmatter %}
+
+[^1]: According to Ackroyd, Mehra “maintained that the preservation of the painting’s appearance and the positive aspects of its age (e.g., cupped or raised cracks) were more important than the choice of lining materials” ([[Ackroyd 2002\|, 4]]).
+
+[^2]: Indeed, other papers presented at Greenwich, such as that of Chittenden, Lewis, and Percival-Prescott on low-pressure lining ([[Chittenden, Lewis, and Percival-Prescott 2003]]), trace similar analyses and practical approaches as those outlined here summarizing Mehra’s thinking.
+
+[^3]: Interview with Bent Hacke, 1983.
+
+[^4]: Interview with Bent Hacke, 1983.
+
+[^5]: For instance, Mehra’s insistence on understanding the strength of the materials of a painting is more fully quantified by Mecklenburg’s research.
